--- a/index.html
+++ b/index.html
@@ -8,4 +8,65 @@
 </head>
 <body>
 
+  <header>
+    <h1>Pangolin</h1>
+    <nav>
+      <ul>
+        <li><a href="#">Description</a></li>
+        <li><a href="#">Behaviour</a></li>
+        <li><a href="#">Conservation</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <section>
+      <h2>Description</h2>
+    </section>
+
+    <section>
+      <h2>Behaviour</h2>
+    </section>
+
+    <section>
+      <h2>Conservation</h2>
+    </section>
+  </main>
+
+
+          The Pangolin
+
+          Jump to main content
+          Jump to navigation
+
+          Pangolin
+          Description
+          Behaviour
+          Conservation
+
+          Description
+          Some countries where pangolins are found
+          Botswana
+          Kenya
+          Mozambique
+          Namibia
+          South Africa
+          Tanzania
+          Uganda
+          Zambia
+          Zimbabwe
+
+          Behaviour
+          https://en.wikipedia.org/wiki/Pangolin#Behavior
+          Read more about Pangolin behaviour
+          Read more
+
+          Conservation
+          https://en.wikipedia.org/wiki/Pangolin#Conservation
+          Read more about Pangolin conservation
+          Read more
+
+          © 1821 Pangolin
+
+
 </body>
