Add links to external site

--- a/index.html
+++ b/index.html
@@ -48,10 +48,12 @@
 
     <section id="behaviour" tabindex="0">
       <h2>Behaviour</h2>
+      <a href="  https://en.wikipedia.org/wiki/Pangolin#Behavior" aria-label="Read more about Pangolin behaviour">Read more</a>
     </section>
 
     <section id="conservation" tabindex="0">
       <h2>Conservation</h2>
+      <a href="  https://en.wikipedia.org/wiki/Pangolin#Conservation" aria-label="Read more about Pangolin conservation">Read more</a>
     </section>
   </main>
 
@@ -59,39 +61,5 @@
     <small>© 1821 Pangolin</small>
   </footer>
 
-          The Pangolin
-
-          Jump to main content
-          Jump to navigation
-
-          Pangolin
-          Description
-          Behaviour
-          Conservation
-
-          Description
-          Some countries where pangolins are found
-          Botswana
-          Kenya
-          Mozambique
-          Namibia
-          South Africa
-          Tanzania
-          Uganda
-          Zambia
-          Zimbabwe
-
-          Behaviour
-          https://en.wikipedia.org/wiki/Pangolin#Behavior
-          Read more about Pangolin behaviour
-          Read more
-
-          Conservation
-          https://en.wikipedia.org/wiki/Pangolin#Conservation
-          Read more about Pangolin conservation
-          Read more
-
-          © 1821 Pangolin
-
-
 </body>
+</html>
